finished showcase section

--- a/index.html
+++ b/index.html
@@ -32,9 +32,22 @@
   <!-- Header: Showcase -->
   <header id="showcase">
     <div class="showcase-content">
-
+      <h1 class="l-heading">
+        The Sky Is The Limit
+      </h1>
+      <p class="lead">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem excepturi in nostrum odit. Animi, et?
+      </p>
+      <a href="#what" class="btn">Read More</a>
     </div>
   </header>
+
+  <!-- What We Do -->
+  <section id="what" class="bg-light py-1">
+    <div class="container">
+      <h2 class="m-heading"><span class="text-primary">What</span> We Do</h2>
+    </div>
+  </section>
 
 
 
