--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
   <nav id="navbar">
     <h1 class="logo">
       <span class="text-primary">
-        <i class="fas fa-book-open"></i> Edge
-      </span>Ledger
+        <i class="fas fa-book-open"></i> Edge</span>Ledger
     </h1>
     <ul>
       <li><a href="#home">Home</a></li>
@@ -45,7 +44,31 @@
   <!-- What We Do -->
   <section id="what" class="bg-light py-1">
     <div class="container">
-      <h2 class="m-heading"><span class="text-primary">What</span> We Do</h2>
+      <h2 class="m-heading text-center"><span class="text-primary">What</span> We Do</h2>
+      <div class="items">
+        <div class="item">
+          <i class="fas fa-university fa-2x"></i>
+          <div>
+            <h3>Investment Banking</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, incidunt!</p>
+          </div>
+        </div>
+        <div class="item">
+          <i class="fas fa-book-reader fa-2x"></i>
+          <div>
+            <h3>Portfolio Management</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, incidunt!</p>
+          </div>
+        </div>
+        <div class="item">
+          <i class="fas fa-pencil-alt fa-2x"></i>
+          <div>
+            <h3>Tax & Custodial</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, incidunt!</p>
+          </div>
+
+        </div>
+      </div>
     </div>
   </section>
 
