--- a/index.html
+++ b/index.html
@@ -66,8 +66,41 @@
             <h3>Tax & Custodial</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, incidunt!</p>
           </div>
-
         </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Who We Are -->
+  <section id="who">
+    <div class="who-img"></div>
+    <div class="who-text bg-dark p-2">
+      <h2 class="m-heading"><span class="text-primary">Who</span> We Are</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, cum labore vero earum soluta minima, animi
+        quod autem necessitatibus commodi voluptates unde nulla placeat beatae officiis id iure minus eos.</p>
+      <h3>Our Team</h3>
+      <ul class="list">
+        <li>Mark Smith: CEO</li>
+        <li>Shannon Johnson: CFO</li>
+        <li>John Corbit: Lead Accountant</li>
+        <li>Janet Williams: Investment Manager</li>
+        <li>Kara Jackson: Senior Accountant</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Clients -->
+  <section id="clients" class="py-1">
+    <div class="container">
+      <h2 class="m-heading text-center">
+        <span class="text-primary">Our</span> Clients
+      </h2>
+      <div class="items py-1">
+        <div><img src="assets/photos/logos/logo1.png" alt="Client"></div>
+        <div><img src="assets/photos/logos/logo2.png" alt="Client"></div>
+        <div><img src="assets/photos/logos/logo3.png" alt="Client"></div>
+        <div><img src="assets/photos/logos/logo4.png" alt="Client"></div>
+        <div><img src="assets/photos/logos/logo5.png" alt="Client"></div>
       </div>
     </div>
   </section>
