--- a/index.html
+++ b/index.html
@@ -105,8 +105,40 @@
     </div>
   </section>
 
+  <!-- Contact -->
+  <section id="contact">
+    <div class="contact-form bg-primary p-2">
+      <h2 class="m-heading">Contact Us</h2>
+      <p>Please use the form below to contact us</p>
+      <form>
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input type="text" name="name" id="name" placeholder="Enter Name">
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" name="email" id="email" placeholder="Enter Email">
+        </div>
+        <div class="form-group">
+          <label for="phone">Phone Number</label>
+          <input type="text" name="phone" id="phone" placeholder="Enter Phone Number">
+        </div>
+        <div class="form-group">
+          <label for="message">Message</label>
+          <textarea name="message" id="message" placeholder="Enter Message"></textarea>
+        </div>
+        <input type="submit" value="Send" class="btn btn-dark">
+      </form>
 
+    </div>
+    <div class="map"></div>
+  </section>
 
+  <script src="js/main.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRdVYbRWdMmST7u0gq77HfoXOW8CetStU&callback=initMap"
+    async defer></script>
 </body>
 
 </html>
+
+<!-- AIzaSyCRdVYbRWdMmST7u0gq77HfoXOW8CetStU -->
