--- a/index.html
+++ b/index.html
@@ -134,6 +134,14 @@
     <div class="map"></div>
   </section>
 
+  <!-- Footer -->
+  <footer id="main-footer" class="bg-dark text-center py-1">
+    <div class="container">
+      <p>Copyright &copy; 2019, EdgeLedger, All Rights Reserverd</p>
+
+    </div>
+  </footer>
+
   <script src="js/main.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRdVYbRWdMmST7u0gq77HfoXOW8CetStU&callback=initMap"
     async defer></script>
