--- a/index.html
+++ b/index.html
@@ -142,7 +142,11 @@
     </div>
   </footer>
 
+  <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+    crossorigin="anonymous"></script>
+
   <script src="js/main.js"></script>
+
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRdVYbRWdMmST7u0gq77HfoXOW8CetStU&callback=initMap"
     async defer></script>
 </body>
